# mcp-gsc

./: .env.example  .gitignore  Dockerfile  README.md  app_config.py  auth_context.py  generate_secrets.py  google_auth.py  gsc_server.py  oauth_server.py  pyproject.toml  requirements.txt  test_gsc_server.py  token_store.py  web_app.py
