[project]
name = "mcp-search-console"
version = "0.3.2"
description = "Google Search Console integration for Model Context Protocol (MCP)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Amin Foroutan", email = "aio@aminforoutan.com"}
]
keywords = ["mcp", "google search console", "seo", "claude", "search analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "cryptography>=42.0.0",
    "google-api-python-client>=2.163.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "mcp[cli]>=1.12.4",
    "platformdirs>=4.0.0",
    "psycopg[binary]>=3.2.0",
]

[project.urls]
"Homepage" = "https://github.com/AminForou/mcp-gsc"
"Bug Tracker" = "https://github.com/AminForou/mcp-gsc/issues"

[project.scripts]
mcp-gsc = "gsc_server:main"
mcp-search-console = "gsc_server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app_config", "auth_context", "google_auth", "gsc_server", "oauth_server", "token_store", "web_app"]
